# WHC

./: .gitignore  01_data_prep_realdata.py  02_build_waving_hand_parquet.py  README.md  demo_whc2.py  pyproject.toml
whc/: __init__.py  data.py  model.py  pipeline.py
